Sun Apr 12 22:51:31 MEST 1998 Sven Neumann <sven@gimp.org>

	* gimp_tips.txt: added a few more tips
	* plugins/webbrowser/webbrowser.scm: updated the URL to the
	GIMP Bugs page

Sun Apr 12 15:49:25 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/palette.c: fixed a typo in the menu
	* gimprc.in: removed the systemwide palettes directory from the 
	palettes searchpath

Sun Apr 12 02:23:05 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: I guess it didn't end... an attempt to try to
	recognize all types of tiff configs

	* app/gdisplay_ops.c: resize on zoom fix for naught window
	positioning from Kevin Cozens <kcozens@interlog.com>

	* app/errors.c: gdk_exit needs to be prototyped

Sun Apr 12 01:19:35 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: more fixes... when will it all end...

	* plug-ins/xd/xd.c: compile with >= 0.15 now

	* app/transform.[ch]: applied gimp-alt-980412, fixes control
	point selection for transforms

Sat Apr 11 15:23:26 PDT 1998 Manish Singh <yosh@gimp.org>

	* Made 0.99.26 release

Sat Apr 11 15:03:43 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/gdisplay.c: reverted cosmetic fix below, broke zoomed
	updates

	* configure.in: changes to xdelta and jpeg checks

	* updated bmp plugin

	* portability patch for polar

	* minor bugfix to vpropagate
	
	* fix for memory problem in xwd

Sat Apr 11 00:03:33 PDT 1998 Manish Singh <yosh@gimp.org>

	* Made 0.99.25 release

Fri Apr 10 21:59:18 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/app_procs.c: fixed up idle handler for file open
	(look like testgtk idle demo)

	* app/colomaps.c: fixup for visual test and use of gdk_color_alloc
	for some fixed colors (from Owen Taylor)

	* app/errors.h
	* app/errors.c
	* app/main.c
	* libgimp/gimp.c: redid the signal handlers so we only get a
	debug prompt on SIGSEGV, SIGBUS, and SIGFPE.

	* applied gimp-jbuhler-980408-0 and gimp-joke-980409-0 (warning
	fixups)

	* applied gimp-monnaux-980409-0 for configurable plugin path for
	multiarch setups
